--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <title>"Folia de Reis"</title>
 </head>
 <body>
-    <h1>"Folia de Reis"</h1>
-    <h2>"é uma festa e tradição popular católica muito celebrada em alguns estados do Brasil"</h2>
+    <h1>Folia de Reis</h1>
+    <h2>Origem e Significado</h2>
+    <p>A Folia de Reis tem raízes no cristianismo europeu, trazida para o Brasil pelos colonizadores portugueses durante o período colonial</p>
+    <p>A tradição está associada ao ciclo natalino, sendo realizada principalmente entre 24 de dezembro (véspera de Natal) e 6 de janeiro (Dia de Reis)</p>
+    <h3>Grupo de Foliões</h3>
+    <p>Formado por músicos, cantores e dançantes que percorrem as casas da comunidade.
+Inclui personagens como o Mestre (líder), os Três Reis Magos (geralmente representados por três cantores), o Palhaço (figura que protege o grupo e diverte o público) e os Foliões (participantes em geral).</p>
+<h4>Músicas e Instrumentos</h4>
+<p>As canções são entoadas em forma de loas (versos religiosos ou narrativos).
+
+Os instrumentos mais comuns são viola caipira, sanfona, pandeiro, reco-reco, cavaquinho e triângulo.</p>
 </body>
 </html>
