--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>"Folia de Reis"</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Folia de Reis</h1>
